tests/ui/const-generics/adt_const_params/const_param_ty_dyn_compatibility.stderr
error[E0038]: the trait `ConstParamTy_` is not dyn compatible
  --> $DIR/const_param_ty_dyn_compatibility.rs:6:16
   |
LL | fn foo(a: &dyn ConstParamTy_) {}
   |                ^^^^^^^^^^^^^ `ConstParamTy_` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it uses `Self` as a type parameter
help: consider using an opaque type instead
   |
LL - fn foo(a: &dyn ConstParamTy_) {}
LL + fn foo(a: &impl ConstParamTy_) {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
